(fix) Fix the alignment and coloring of icons and text

--- a/client/styles.css
+++ b/client/styles.css
@@ -24,7 +24,7 @@ ul
 {
   list-style-type: none;
 /*  display: block; float: left;*/
-  font-size: 20px;
+  font-size: 18px;
   color: #000000;
   /*text-align: center;*/
 }
